# encoderPy

./: CONTRIBUTING.md  CONTRIBUTORS.md  LICENSE  README.html  README.md  pyproject.toml  vignette.Rmd  vignette.html
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
docs/source/: encoderpy.rst  modules.rst
encoderpy/: catboost_encoder.py  conjugate_encoder.py  frequency_encoder.py  onehot_encoder.py  target_encoder.py
tests/: test_conjugate_encoder.py  test_encoderpy.py  test_frequency_encoder.py  test_one_hot_encoder.py  test_onehot_encoder.py  test_target_encoder.py
