[tool.poetry]
name = "encoderPy"
version = "0.1.0"
description = "A collection of categorical encoders in Python."
authors = ["braydentang1 <brayden.tang1@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
