[tool.poetry]
name = "encoderPy"
version = "0.1.0"
description = "A collection of categorical encoders in Python."
authors = ["braydentang1 <brayden.tang1@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
numpy = "^1.18.1"

[tool.poetry.dev-dependencies]
sphinx = "^2.4.3"
sphinxcontrib-napoleon = "^0.7"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
