[tool.poetry]
name = "encoderPy"
version = "0.1.1"
description = "A collection of categorical encoders in Python."
authors = ["braydentang1 <brayden.tang1@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
numpy = "^1.18.1"
pandas = "^1.0.1"
flake8 = "^3.7.9"
python-semantic-release = "^4.10.0"

[tool.poetry.dev-dependencies]
sphinx = "^2.4.3"
sphinxcontrib-napoleon = "^0.7"
pytest-cov = "^2.8.1"
pytest = "^5.4.0"
codecov = "^2.0.16"

[tool.semantic_release]
 version_variable = "encoderpy/__init__.py:__version__"
 version_source = "commit"
 upload_to_pypi = "false"
 patch_without_tag = "true"
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

